; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_errno-list.c_errno_to_name.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_errno-list.c_errno_to_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno_names = common dso_local global i8** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @errno_to_name(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = icmp slt i32 %4, 0
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = load i32, i32* %3, align 4
  %8 = sub nsw i32 0, %7
  store i32 %8, i32* %3, align 4
  br label %9

9:                                                ; preds = %6, %1
  %10 = load i32, i32* %3, align 4
  %11 = sext i32 %10 to i64
  %12 = load i8**, i8*** @errno_names, align 8
  %13 = call i64 @ELEMENTSOF(i8** %12)
  %14 = icmp uge i64 %11, %13
  br i1 %14, label %15, label %16

15:                                               ; preds = %9
  store i8* null, i8** %2, align 8
  br label %22

16:                                               ; preds = %9
  %17 = load i8**, i8*** @errno_names, align 8
  %18 = load i32, i32* %3, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds i8*, i8** %17, i64 %19
  %21 = load i8*, i8** %20, align 8
  store i8* %21, i8** %2, align 8
  br label %22

22:                                               ; preds = %16, %15
  %23 = load i8*, i8** %2, align 8
  ret i8* %23
}

declare dso_local i64 @ELEMENTSOF(i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
